--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/react": "^17.0.2",
+    "date-fns": "^2.28.0",
     "file-loader": "^6.2.0",
+    "lodash": "^4.17.21",
     "scrivito": "^1.29.0",
     "ts-loader": "^9.3.0",
     "typescript": "^4.6.3",
@@ -23,6 +25,9 @@
   "peerDependencies": {
     "scrivito": "*",
     "react": "*",
-    "react-dom": "*"
+    "react-dom": "*",
+    "lodash": "*",
+    "date-fns": "*",
+    "date-fns/locale": "*"
   }
 }
