--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "file-loader": "^6.2.0",
+    "html-react-parser": "^1.4.12",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "react-overlays": "^5.1.1",
+    "react-router-dom": "^5.2.0",
+    "sanitize-html": "^2.7.0",
     "scrivito": "^1.29.0",
     "ts-loader": "^9.3.0",
     "typescript": "^4.6.3",
@@ -35,6 +38,9 @@
     "classnames": "*",
     "react-overlays": "*",
     "lodash-es": "*",
-    "axios": "*"
+    "axios": "*",
+    "react-router-dom": "*",
+    "html-react-parser": "*",
+    "sanitize-html": "*"
   }
 }
