--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "html-react-parser": "^1.4.12",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
+    "react-bootstrap": "^2.3.1",
     "react-overlays": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "sanitize-html": "^2.7.0",
@@ -41,6 +42,7 @@
     "axios": "*",
     "react-router-dom": "*",
     "html-react-parser": "*",
-    "sanitize-html": "*"
+    "sanitize-html": "*",
+    "react-bootstrap": "*"
   }
 }
