--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ts-loader": "^9.3.0",
     "typescript": "^4.6.3",
     "url-loader": "^4.1.1",
+    "uuid": "^8.3.2",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   },
@@ -43,6 +44,7 @@
     "react-router-dom": "*",
     "html-react-parser": "*",
     "sanitize-html": "*",
-    "react-bootstrap": "*"
+    "react-bootstrap": "*",
+    "uuid": "*"
   }
 }
