Optimize dist size

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "*",
     "lodash": "*",
     "date-fns": "*",
+    "date-fns/locale": "*",
     "classnames": "*",
     "react-overlays": "*",
     "lodash-es": "*",
