--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "test",
+    "test": "jest",
     "build": "webpack",
     "build-stats": "webpack --profile --json > stats.json",
     "analyze-bundle": "webpack-bundle-analyzer stats.json"
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@honeybadger-io/js": "^4.0.1",
+    "@types/jest": "^27.5.1",
     "@types/react": "^17.0.2",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
@@ -21,14 +22,17 @@
     "file-loader": "^6.2.0",
     "history": "^5.0.0",
     "html-react-parser": "^1.4.12",
+    "jest": "^28.1.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "react-bootstrap": "^2.3.1",
+    "react-dom": "^18.1.0",
     "react-overlays": "^5.1.1",
     "react-router": "^5.3.3",
     "react-router-dom": "^5.3.3",
     "sanitize-html": "^2.7.0",
     "scrivito": "^1.29.0",
+    "ts-jest": "^28.0.2",
     "ts-loader": "^9.3.0",
     "typescript": "^4.6.3",
     "url-loader": "^4.1.1",
