--- a/jest.config.json
+++ b/jest.config.json
@@ -2,7 +2,7 @@
   "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.ts?$",
   "preset": "ts-jest",
   "moduleNameMapper": {
-    "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga|html)$": "<rootDir>/src/__mocks__/fileMock.ts",
-    "\\.(css|less|scss)$": "<rootDir>/src/__mocks__/styleMock.ts"
+    "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga|html)$": "<rootDir>/__mocks__/fileMock.ts",
+    "\\.(css|less|scss)$": "<rootDir>/__mocks__/styleMock.ts"
   }
 }
