--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^17.0.2",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "css-loader": "^6.7.1",
     "date-fns": "^2.28.0",
     "file-loader": "^6.2.0",
     "history": "^5.0.0",
@@ -25,12 +26,15 @@
     "jest": "^28.1.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
+    "mini-css-extract-plugin": "^2.6.1",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
     "react-overlays": "^5.1.1",
     "react-router": "^5.3.3",
     "react-router-dom": "^5.3.3",
     "sanitize-html": "^2.7.0",
+    "sass": "^1.52.3",
+    "sass-loader": "^13.0.0",
     "scrivito": "^1.29.0",
     "ts-jest": "^28.0.2",
     "ts-loader": "^9.3.0",
