--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "jest",
     "build": "webpack",
+    "watch": "webpack watch",
     "build-stats": "webpack --profile --json > stats.json",
     "analyze-bundle": "webpack-bundle-analyzer stats.json"
   },
