--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jr-customer-portal-sdk",
-  "version": "0.0.11",
+  "version": "0.0.12-alpha.0",
   "description": "Library for JustRelate Customer Portal apps",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
