--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.28.0",
     "file-loader": "^6.2.0",
     "html-react-parser": "^1.4.12",
+    "history": "^5.0.1",
     "jest": "^28.1.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
@@ -46,6 +47,7 @@
     "classnames": "*",
     "date-fns": "*",
     "html-react-parser": "*",
+    "history": "*",
     "lodash": "*",
     "lodash-es": "*",
     "react": "*",
