--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "css-loader": "^6.7.1",
     "date-fns": "^2.28.0",
     "file-loader": "^6.2.0",
-    "html-react-parser": "^1.4.12",
+    "html-react-parser": "^3.0.4",
     "jest": "^28.1.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
@@ -52,9 +52,9 @@
     "html-react-parser": "*",
     "lodash": "*",
     "lodash-es": "*",
-    "react": "*",
-    "react-dom": "*",
+    "react": "^18.2.0",
     "react-bootstrap": "*",
+    "react-dom": "*",
     "react-overlays": "*",
     "sanitize-html": "*",
     "scrivito": "*",
