--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^2.28.0",
     "file-loader": "^6.2.0",
     "html-react-parser": "^3.0.4",
+    "i18next": "^22.0.4",
     "jest": "^28.1.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
@@ -50,6 +51,7 @@
     "classnames": "*",
     "date-fns": "*",
     "html-react-parser": "*",
+    "i18next": "*",
     "lodash": "*",
     "lodash-es": "*",
     "react": "^18.2.0",
