--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "devDependencies": {
     "@honeybadger-io/js": "^4.0.1",
+    "@rjsf/core": "^5.0.0-beta.6",
+    "@rjsf/validator-ajv6": "^5.0.0-beta.6",
     "@types/jest": "^27.5.1",
     "@types/lodash": "^4.14.182",
     "@types/react": "^17.0.2",
