--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
   "license": "ISC",
   "devDependencies": {
     "@honeybadger-io/js": "^4.0.1",
-    "@rjsf/core": "^5.0.0-beta.6",
-    "@rjsf/validator-ajv6": "^5.0.0-beta.6",
     "@types/jest": "^27.5.1",
     "@types/lodash": "^4.14.182",
     "@types/react": "^17.0.2",
@@ -48,6 +46,12 @@
     "webpack-cli": "^4.9.2"
   },
   "peerDependencies": {
+    "@dnd-kit/core": "^6.0.5",
+    "@dnd-kit/modifiers": "^6.0.0",
+    "@dnd-kit/sortable": "^7.0.1",
+    "@dnd-kit/utilities": "^3.2.0",
+    "@rjsf/core": "^5.0.0-beta.6",
+    "@rjsf/validator-ajv6": "^5.0.0-beta.6",
     "@honeybadger-io/js": "*",
     "axios": "*",
     "classnames": "*",
