--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "install": "[ -f ./dist/index.js ] || ([ -f ./src/index.ts ] && webpack)",
     "test": "jest",
+    "eslint": "eslint src/",
+    "eslint-fix": "eslint src/ --fix",
     "build": "webpack",
     "watch": "webpack watch",
     "build-stats": "webpack --profile --json > stats.json",
@@ -19,10 +21,17 @@
     "@types/jest": "^27.5.1",
     "@types/lodash": "^4.14.182",
     "@types/react": "^17.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "css-loader": "^6.7.1",
     "date-fns": "^2.28.0",
+    "eslint": "^8.29.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.6.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.31.11",
     "file-loader": "^6.2.0",
     "html-react-parser": "^3.0.4",
     "i18next": "^22.0.4",
@@ -39,7 +48,7 @@
     "scrivito": "^1.29.0",
     "ts-jest": "^28.0.2",
     "ts-loader": "^9.3.0",
-    "typescript": "^4.6.3",
+    "typescript": "^4.9.4",
     "url-loader": "^4.1.1",
     "uuid": "^8.3.2",
     "webpack": "^5.72.0",
