--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "jsx": "react",
-    "target": "ESNext",
+    "target": "ES2015",
     "module": "commonjs",
     "declaration": true,
     "outDir": "dist",
