--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,10 +25,10 @@
     "@typescript-eslint/semi": "warn",
     "react/prop-types": 0,
     "@typescript-eslint/no-non-null-assertion": "off",
-    "@typescript-eslint/no-unused-vars": "off",
-    "no-unused-vars": [
-      1,
+    "@typescript-eslint/no-unused-vars": [
+      "error",
       { "args": "all", "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }
-    ]
+    ],
+    "no-unused-vars": "off"
   }
 }
